tdf#162662 sw: fix layout loop with full-page anchored shape that wants to wrap

The bugdoc has a full-page group shape on page 2, with wrap type set to
"above and below", which is Writer's "no wrap" type. Open this document
in Writer, the layout loops before showing the first page.

What seems to happen is that SwTextFrame::FormatAdjust() splits the
anchor of the group shape at position 0, splits, then
SwFlowFrame::MoveFwd() moves it to the next page. Now page 2 is empty,
so later SwFlowFrame::MoveBwd() moves the content back from page 3 ->
loop.

Fix the problem by checking for this "we would split at para start due
to full-page shape" case and in case wrapping is requested, but at the
same time to size is so large that it can't be provided, then don't try
to split as we'll join later anyway, so it's pointless.

This matches Word behavior, which also doesn't try to move the body text
of page 2 to a 3rd page in this conflicting case. An alternative would
be to not tweak the "should we split" logic, but instead change the
layout to assume "wrap through" instead of "no wrap" in this case.
Fixing this in SwTextFrame::FormatAdjust() has the advantage that the
i#84870 problem (similar, but for as-char images) was also fixed here,
so this looks more consistent.

Change-Id: Icfb58183c89a32b5f97c901d17cfae0fcc4e711f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172523
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 5bd78c7dc4d17378c31207e6640e4d141d2ef5c3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172498
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>