sw/qa/core/text/frmform.cxx
@@ -149,6 +149,46 @@ CPPUNIT_TEST_FIXTURE(Test, testFloattableBadFlyPos)
     CPPUNIT_ASSERT(pPage4->GetSortedObjs());
     CPPUNIT_ASSERT_EQUAL(static_cast<size_t>(1), pPage4->GetSortedObjs()->size());
 }
+
+CPPUNIT_TEST_FIXTURE(Test, testFullPageShapeWrap)
+{
+    // Given a conflicting doc model: full page shape wants to wrap but leaves no space for the body
+    // text:
+    // When loading this document:
+    // Without the accompanying fix in place, this test would have resulted in a layout loop:
+    // content on page 2 did not fit the space, so move to page 3, then page 2 was empty, so we
+    // moved back -> loop.
+    createSwDoc("full-page-shape-wrap.docx");
+
+    // Check the import result:
+    SwDoc* pDoc = getSwDoc();
+    SwRootFrame* pLayout = pDoc->getIDocumentLayoutAccess().GetCurrentLayout();
+    // No anchored objects on page 1:
+    auto pPage1 = pLayout->Lower()->DynCastPageFrame();
+    CPPUNIT_ASSERT(pPage1);
+    CPPUNIT_ASSERT(!pPage1->GetSortedObjs());
+    // One group shape on page 2, and several fly frames (visually) inside that:
+    auto pPage2 = pPage1->GetNext()->DynCastPageFrame();
+    CPPUNIT_ASSERT(pPage2);
+    CPPUNIT_ASSERT(pPage2->GetSortedObjs());
+    int nFlyCount = 0;
+    int nDrawCount = 0;
+    for (const auto& pAnchoredObject : *pPage2->GetSortedObjs())
+    {
+        if (pAnchoredObject->GetFrameFormat()->Which() == RES_FLYFRMFMT)
+        {
+            ++nFlyCount;
+        }
+        else
+        {
+            ++nDrawCount;
+        }
+    }
+    CPPUNIT_ASSERT_EQUAL(1, nDrawCount);
+    CPPUNIT_ASSERT_GREATER(1, nFlyCount);
+    // No page 3.
+    CPPUNIT_ASSERT(!pPage2->GetNext());
+}
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
